# ssecs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  rustfmt.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: archetype.rs  component.rs  entity.rs  lib.rs  meta_tags.rs  query.rs  slotmap.rs  world.rs
src/world/: archetype.rs  command.rs  core.rs  mantle.rs  mod.rs
