[package]
name = "ssecs"
version.workspace = true
edition.workspace = true
authors = ["iiYese iiyese@outlook.com"]
description = "Somewhat Simple ECS"
license = "MIT OR Apache-2.0"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace]
members = ["macros"]

[workspace.dependencies]
ssecs-macros = { path = "macros" }

[dependencies]
aligned-vec = "0.6.4"
derive_more = { version  = "2.0.1", features = ["deref", "deref_mut", "from"] }
linkme = "0.3.32"
parking_lot = "0.12.3"
smallvec = "1.15.0"
ssecs-macros.workspace = true
thread_local = "1.1.8"
